--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
   keycloak:
     hostname: keycloak
     container_name: keycloak
-    image: jboss/keycloak:9.0.0
+    image:  jboss/keycloak:11.0.2
     restart: always
     environment:
       KEYCLOAK_USER:   
@@ -16,8 +16,7 @@ services:
       PROXY_ADDRESS_FORWARDING: "true"
 
   tunnel:
-    # Ad-hoc build pending official image
-    build: https://github.com/cloudflare/cloudflared.git
+    image: cloudflare/cloudflared:2020.10.0
     container_name: tunnel
     environment:
       TUNNEL_HOSTNAME: 
